<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/colorWhite"
    android:baselineAligned="false"
    android:orientation="horizontal"
    android:padding="3dp"
    android:layout_marginTop="8dp"
    tools:context=".activity.MainActivity">

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="8"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textViewNight"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="10dp"
                android:background="@drawable/border_background"
                android:gravity="center"
                android:text="@string/n"
                android:textColor="@color/colorBlack"
                android:textSize="15sp" />

            <TextView
                android:id="@+id/textViewName"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/app_name"
                android:textColor="@color/colorBlack"
                android:textSize="16sp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textViewDay"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="10dp"
                android:background="@drawable/border_background"
                android:gravity="center"
                android:text="@string/d"
                android:textColor="@color/colorBlack"
                android:textSize="15sp" />

            <TextView
                android:id="@+id/textViewDescription"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/description"
                android:singleLine="true"
                android:textColor="@color/colorBlack" />

        </LinearLayout>

        <TextView
            android:id="@+id/textViewRupees"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="34dp"
            android:gravity="center_vertical"
            android:text="@string/rupees"
            android:textColor="@color/colorOrange"
            android:textSize="18sp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="2"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            tools:ignore="NestedWeights">

            <Button
                android:id="@+id/buttonAdd"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:text="@string/add" />

            <LinearLayout
                android:id="@+id/linearCount"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:background="@drawable/border_count"
                android:gravity="center"
                android:orientation="horizontal"
                android:visibility="gone"
                android:weightSum="10">

                <TextView
                    android:id="@+id/textViewMinus"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="3"
                    android:gravity="center"
                    android:text="@string/minus"
                    android:textColor="@color/colorBlack"
                    android:textSize="20sp" />

                <TextView
                    android:id="@+id/textViewQuantity"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_gravity="center"
                    android:layout_weight="4"
                    android:gravity="center"
                    android:text="@string/_1"
                    android:textColor="@color/colorBlack"
                    android:textSize="15sp" />

                <TextView
                    android:id="@+id/textViewPlus"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="3"
                    android:gravity="center"
                    android:text="@string/plus"
                    android:textColor="@color/colorBlack" />

            </LinearLayout>

        </RelativeLayout>

        <TextView
            android:id="@+id/imageViewM"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center|bottom"
            android:background="@drawable/icons8_chat_room_25px"
            android:gravity="center"
            android:visibility="gone" />

    </LinearLayout>

</LinearLayout>