<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".activity.MainActivity"
    android:background="@color/colorBackGround"
    android:weightSum="100"
    android:orientation="vertical"
    android:layout_height="match_parent">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="97">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">


            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="45dp"
                android:background="@color/colorWhite"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/guidelineright"
                app:layout_constraintStart_toStartOf="@+id/guidelineleft"
                app:layout_constraintTop_toBottomOf="@+id/cardViewCost">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_margin="16dp">

                    <androidx.recyclerview.widget.RecyclerView
                        android:id="@+id/recyclerViewtems"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintHorizontal_bias="0.0"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/textViewOrders"
                        app:layout_constraintVertical_bias="0.0"
                        tools:listitem="@layout/listview_cart" />

                    <RadioGroup
                        android:id="@+id/radioGroupDelivery"
                        android:layout_width="match_parent"
                        android:layout_height="50dp"
                        android:gravity="center"
                        android:orientation="horizontal"
                        android:weightSum="2"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/textViewDelivery"
                        app:layout_constraintVertical_bias="0.0">

                        <RadioButton
                            android:id="@+id/radioButtonDineIn"
                            android:layout_width="wrap_content"
                            android:layout_height="match_parent"
                            android:layout_weight="1"
                            android:drawablePadding="20dp"
                            android:drawableStart="@drawable/icons8_restaurant_table_25px"
                            android:checked="true"
                            android:gravity="end|center_vertical"
                            android:layoutDirection="rtl"
                            android:text="@string/dine_in"
                            android:textColor="@color/colorBlack" />

                        <RadioButton
                            android:id="@+id/radioButtonTakeWay"
                            android:layout_width="wrap_content"
                            android:layout_height="match_parent"
                            android:layout_weight="1"
                            android:checked="false"
                            android:drawableStart="@drawable/icons8_in_transit_25px"
                            android:drawablePadding="20dp"
                            android:gravity="end|center_vertical"
                            android:layoutDirection="rtl"
                            android:text="@string/take_way"

                            android:textColor="@color/colorBlack" />
                    </RadioGroup>

                    <TextView
                        android:id="@+id/textViewShowmore"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginVertical="10dp"
                        android:layout_marginBottom="10dp"
                        android:text="@string/show_more"
                        android:textAlignment="textEnd"
                        android:textColor="@color/colorBlack"
                        android:textSize="15sp"
                        app:layout_constraintBottom_toTopOf="@+id/textViewDelivery"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintHorizontal_bias="1.0"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/recyclerViewtems" />

                    <TextView
                        android:id="@+id/textViewDelivery"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="4dp"
                        android:paddingVertical="7dp"
                        android:text="@string/delivery_options"
                        android:textAlignment="textStart"
                        android:textColor="@color/colorBlack"
                        android:textSize="15sp"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintHorizontal_bias="0.0"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/textViewShowmore" />

                    <TextView
                        android:id="@+id/textViewOrders"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:paddingVertical="7dp"
                        android:text="@string/review_orders"
                        android:textAlignment="textStart"
                        android:textColor="@color/colorBlack"
                        android:textSize="15sp"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintHorizontal_bias="0.0"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <TextView
                        android:id="@+id/textViewManageCards"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="4dp"
                        android:paddingVertical="7dp"
                        android:text="@string/manage_cards"
                        android:textColor="@color/colorBlack"
                        android:textSize="15sp"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintHorizontal_bias="0.0"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/radioGroupDelivery"
                        app:layout_constraintVertical_bias="0.112" />

                    <androidx.constraintlayout.widget.Barrier
                        android:id="@+id/barrier5"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        app:barrierDirection="bottom"
                        app:constraint_referenced_ids="textViewShowmore"
                        tools:layout_editor_absoluteY="368dp" />

                </androidx.constraintlayout.widget.ConstraintLayout>
            </FrameLayout>

            <ImageButton
                android:id="@+id/imageButtonBack"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/colorTransparent"
                app:layout_constraintEnd_toStartOf="@+id/textViewMyCart"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@+id/guidelinetop"
                app:srcCompat="@drawable/abc_vector_test"
                tools:ignore="ContentDescription" />

            <TextView
                android:id="@+id/textViewMyCart"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:paddingHorizontal="10dp"
                android:paddingVertical="4dp"
                android:text="@string/my_cart"
                android:textColor="@color/colorWhite"
                android:textSize="26sp"
                app:layout_constraintBottom_toBottomOf="@+id/imageButtonBack"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toEndOf="@+id/imageButtonBack"
                app:layout_constraintTop_toTopOf="@+id/imageButtonBack" />

            <androidx.cardview.widget.CardView
                android:id="@+id/cardViewCost"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="32dp"
                android:backgroundTint="@color/colorWhite"
                app:cardCornerRadius="10dp"
                app:layout_constraintEnd_toStartOf="@+id/guidelineright"
                app:layout_constraintStart_toStartOf="@+id/guidelineleft"
                app:layout_constraintTop_toBottomOf="@+id/textViewMyCart">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <TextView
                        android:id="@+id/textViewTotalCost"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="16dp"
                        android:layout_marginBottom="15dp"
                        android:text="@string/total_cost"
                        android:textAllCaps="true"
                        android:textColor="@color/colorOrange"
                        android:textSize="16sp"
                        app:layout_constraintBottom_toTopOf="@+id/textViewCost"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <TextView
                        android:id="@+id/textViewCost"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginHorizontal="65dp"
                        android:layout_marginBottom="16dp"
                        android:text="@string/rupees"
                        android:textColor="@color/colorBlack"
                        android:textSize="20sp"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/textViewTotalCost" />
                </androidx.constraintlayout.widget.ConstraintLayout>
            </androidx.cardview.widget.CardView>

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/guidelineleft"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintGuide_begin="16dp" />

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/guidelineright"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintGuide_end="16dp" />

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/guidelinetop"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                app:layout_constraintGuide_begin="16dp" />
        </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>

    <Button
        android:id="@+id/buttonPlaceOrder"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="3"
        android:backgroundTint="@color/colorBackGround"
        android:elevation="2dp"
        android:padding="25dp"
        android:stateListAnimator="@null"
        android:text="@string/place_order"
        android:textSize="16sp"
        android:translationZ="10dp" />

</LinearLayout>