<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorWhite"
    android:orientation="vertical"
    tools:context=".activity.MainActivity">
<ScrollView
    android:layout_width="match_parent"
    android:layout_weight="1"
    android:layout_height="0dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/mainConstraintLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
       >

        <ImageView
            android:id="@+id/imageViewHeaderBG"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:contentDescription="@string/app_name"
            android:src="@drawable/ic_header_bg"
            android:visibility="visible"
            app:layout_constraintDimensionRatio="h,16:9"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/imageViewBack"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="14dp"
            android:layout_marginBottom="175dp"
            android:background="@color/colorTransparent"
            android:contentDescription="@null"
            android:src="@drawable/icons8_left_50px"
            app:layout_constraintBottom_toBottomOf="@+id/imageViewHeaderBG"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/imageViewHeaderBG"
            app:layout_constraintVertical_bias="1.0" />

        <ImageView
            android:id="@+id/imageViewLogout"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_marginStart="264dp"
            android:background="@color/colorTransparent"
            android:contentDescription="@null"
            app:layout_constraintBottom_toBottomOf="@+id/imageViewBack"
            app:layout_constraintStart_toEndOf="@+id/imageViewBack"
            app:layout_constraintTop_toTopOf="@+id/imageViewBack"
            app:srcCompat="@drawable/icons8_logout_rounded_up_50px" />

        <ImageView
            android:id="@+id/imageViewInfo"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:background="@color/colorTransparent"
            android:contentDescription="@null"
            app:layout_constraintBottom_toBottomOf="@+id/imageViewLogout"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.609"
            app:layout_constraintStart_toEndOf="@+id/imageViewLogout"
            app:layout_constraintTop_toTopOf="@+id/imageViewLogout"
            app:srcCompat="@drawable/icons8_info_50px" />

        <TextView
            android:id="@+id/textViewStarter"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:text="@string/starter"
            android:textColor="@color/colorBlack"
            android:textSize="15sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/cardViewInfo"
            app:layout_constraintVertical_bias="0.0" />

        <androidx.cardview.widget.CardView
            android:id="@+id/cardViewInfo"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="16dp"
            android:layout_marginBottom="100dp"
            android:backgroundTint="@color/colorWhite"
            app:cardCornerRadius="10dp"
            app:cardElevation="20dp"
            app:layout_constraintBottom_toBottomOf="@+id/imageViewHeaderBG"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imageViewHeaderBG">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:orientation="vertical"
                android:padding="10dp"
                android:weightSum="4">

                <TextView
                    android:id="@+id/textViewResName"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginVertical="5dp"
                    android:layout_weight="1"
                    android:text="@string/app_name"
                    android:textColor="@color/colorBlack"
                    android:textSize="18sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/textViewTiming"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:drawablePadding="8dp"

                    android:text="@string/timing"
                    android:textColor="@color/colorBlack"
                    android:textSize="16sp"
                    app:drawableStartCompat="@drawable/icons8_star_25px" />

                <TextView
                    android:id="@+id/textViewContact"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:drawablePadding="8dp"
                    android:text="@string/reach_us"
                    android:textAlignment="center"
                    android:textColor="@color/colorBlack"
                    android:textSize="16sp"
                    app:drawableStartCompat="@drawable/icons8_ringer_volume_25px" />

                <Button
                    android:id="@+id/buttonBook"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginVertical="5dp"
                    android:layout_weight="1"
                    android:backgroundTint="@color/colorBackGround"
                    android:text="@string/book_a_table"
                    android:textAllCaps="true" />

            </LinearLayout>

        </androidx.cardview.widget.CardView>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/listViewFoods"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:padding="10dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textViewStarter"
            app:layout_constraintVertical_bias="0.0"
            tools:listitem="@layout/listview_cart" />

        <ru.dimorinny.floatingtextbutton.FloatingTextButton
            android:id="@+id/action_button_menu"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            app:floating_background_color="@color/colorOrange"
            app:floating_left_icon="@drawable/icons8_tableware_50px"
            app:floating_title="@string/menu"
            app:floating_title_color="@android:color/black"
            app:layout_constraintBottom_toBottomOf="@+id/listViewFoods"
            app:layout_constraintDimensionRatio="20:9"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="1.0"
            tools:srcCompat="@tools:sample/avatars" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>

    <LinearLayout
        android:id="@+id/buttonCart"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorBackGround"
        android:gravity="center"
        android:orientation="horizontal"
        android:paddingHorizontal="10dp"
        android:paddingVertical="15dp">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/icons8_shopping_cart_25px"
            android:contentDescription="@null" />

        <TextView
            android:id="@+id/tvTotalItem"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAllCaps="true"
            android:layout_marginStart="10dp"
            android:text="@string/viewCartItems" />

    </LinearLayout>

</LinearLayout>